project section enhanced

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <nav>
-            <div class="logo">My Portfolio</div>
+            <div class="logo">Project Portfolio</div>
             <ul>
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -259,8 +259,8 @@
                     <div class="timeline-content">
                         <div class="timeline-icon"><i class="fa-solid fa-briefcase"></i></div>
                         <h3>Sr. Software Engineer</h3>
-                        <p class="timeline-details">BRAC IT</p>
-                        <p>Leading the development of scalable web applications and mentoring junior developers.</p>
+                        <p class="timeline-organization">BRAC IT</p>
+                        <p class="timeline-details">Leading the development of scalable web applications and mentoring junior developers.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -268,8 +268,8 @@
                     <div class="timeline-content">
                         <div class="timeline-icon"><i class="fa-solid fa-graduation-cap"></i></div>
                         <h3>MIS Coordinator</h3>
-                        <p class="timeline-details">Winrock International</p>
-                        <p>Graduated with honors, focusing on web development and software engineering principles.</p>
+                        <p class="timeline-organization">Winrock International</p>
+                        <p class="timeline-details">Graduated with honors, focusing on web development and software engineering principles.</p>
                     </div>
                 </div>
                 <div class="timeline-item">
@@ -277,26 +277,26 @@
                     <div class="timeline-content">
                         <div class="timeline-icon"><i class="fa-solid fa-briefcase"></i></div>
                         <h3>Deputy Manager, MIS</h3>
-                        <p class="timeline-details">BRAC</p>
-                        <p>Assisted in the development and maintenance of client websites using HTML, CSS, and JavaScript.</p>
+                        <p class="timeline-organization">BRAC</p>
+                        <p class="timeline-details">Assisted in the development and maintenance of client websites using HTML, CSS, and JavaScript.</p>
                     </div>
                 </div>
                 <div class="timeline-item hidden-timeline-item">
-                    <div class="timeline-year">Jan 2017 - Apr 2018</div>
+                    <div class="timeline-year">Jan 2016 - Dec 2016</div>
                     <div class="timeline-content">
                         <div class="timeline-icon"><i class="fa-solid fa-briefcase"></i></div>
-                        <h3>Junior Developer</h3>
-                        <p class="timeline-details">Web Solutions Co.</p>
-                        <p>Developed and maintained web applications using various front-end and back-end technologies.</p>
+                        <h3>Master of Business Administration</h3>
+                        <p class="timeline-organization">University of Chittagong</p>
+                        <p class="timeline-details">Developed and maintained web applications using various front-end and back-end technologies.</p>
                     </div>
                 </div>
                 <div class="timeline-item hidden-timeline-item">
-                    <div class="timeline-year">Sep 2015 - Dec 2016</div>
+                    <div class="timeline-year">Jan 2012 - Dec 2015</div>
                     <div class="timeline-content">
                         <div class="timeline-icon"><i class="fa-solid fa-graduation-cap"></i></div>
-                        <h3>Intern</h3>
-                        <p class="timeline-details">Tech University</p>
-                        <p>Assisted in research projects and developed small utility scripts. Susing various front-end and back-end technologies.</p>
+                        <h3>Bachelor of Business Administration</h3>
+                        <p class="timeline-organization">University of Chittagong</p>
+                        <p class="timeline-details">Assisted in research projects and developed small utility scripts. Susing various front-end and back-end technologies.</p>
                     </div>
                 </div>
             </div>  
@@ -307,11 +307,11 @@
             <h2 class="section-title">My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/300x200" alt="Project 1">
-                    <h3>Project One</h3>
-                    <p>A brief description of Project One, highlighting its purpose and key features.</p>
+                    <img src="img/bert_movie_review.png" alt="Project 1">
+                    <h3>Sentiment Analysis (BERT)</h3>
+                    <p>Analyzing movie reviews with Natural Language Processing with BERT model, to perform binary classification in texts.</p>
                     <div class="project-tech">
-                        <span>HTML</span><span>CSS</span><span>JavaScript</span>
+                        <span>Python</span><span>NLP</span>
                     </div>
                     <div class="project-links">
                         <a href="#" target="_blank"><i class="fa-solid fa-up-right-from-square"></i> Live Demo</a>
