particle effects added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <main>
 
         <section id="hero">
+            <div id="particles-js"></div>
             <div class="hero-container">
                 <div class="profile-photo-area">
                     <img src="img/myphoto.jpg" alt="My Profile Photo" class="profile-photo">
@@ -368,6 +369,8 @@
     </footer>
 
 
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
 
