20250726-01 seperated js and css files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
@@ -369,9 +369,9 @@
     </footer>
 
 
-    <script src="particles.js"></script>
-    <script src="app.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script src="particles/particles.js"></script>
+    <script src="particles/app.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
