feat: Implement sci-fi photo viewer and refine CSS/JS

--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
         <section id="about">
             <div class="about-content">
                 <h2>About Me</h2>
+                <div class="photo-viewer-container">
+                    <div class="photo-viewer-inner">
+                        <button class="nav-arrow left-arrow"><i class="fas fa-chevron-left"></i></button>
+                        <div class="photo-display">
+                            <img src="img/profile/profile_001.jpg" alt="Profile Photo 1" class="photo-item active">
+                            <img src="img/profile/profile_002.jpg" alt="Profile Photo 2" class="photo-item next">
+                            <img src="img/profile/profile_003.jpg" alt="Profile Photo 3" class="photo-item">
+                            <img src="img/profile/profile_004.jpg" alt="Profile Photo 4" class="photo-item">
+                            <img src="img/profile/profile_005.jpg" alt="Profile Photo 5" class="photo-item prev">
+                        </div>
+                        <button class="nav-arrow right-arrow"><i class="fas fa-chevron-right"></i></button>
+                    </div>
+                </div>
                 <div id="about-text-container" class="truncated-text">
                     <p>I am an experienced data professional with over six years of expertise in data analysis,
                         visualization, geospatial analysis, and information system development. Delivered data strategic
